// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoReducer CreateSuccess should add a todo to the todo state 1`] = `
Array [
  Object {
    "completed": true,
    "description": "some description",
    "id": 1,
    "title": "some title",
  },
  Object {
    "completed": false,
    "description": "another description",
    "id": 2,
    "title": "another title",
  },
]
`;

exports[`TodoReducer DeleteSuccess should delete the todo from the sate 1`] = `
Array [
  Object {
    "completed": true,
    "description": "some description",
    "id": 1,
    "title": "some title",
  },
  Object {
    "completed": false,
    "description": "another description",
    "id": 2,
    "title": "another title",
  },
]
`;

exports[`TodoReducer LoadSuccess should add the todos to the todo state 1`] = `
Array [
  Object {
    "completed": true,
    "description": "some description",
    "id": 1,
    "title": "some title",
  },
  Object {
    "completed": false,
    "description": "another description",
    "id": 2,
    "title": "another title",
  },
]
`;

exports[`TodoReducer UpdateSuccess should update the todo state 1`] = `
Array [
  Object {
    "completed": true,
    "description": "some description",
    "id": 1,
    "title": "some title",
  },
  Object {
    "completed": true,
    "description": "another description",
    "id": 2,
    "title": "another title",
  },
]
`;

exports[`TodoReducer undefined action should return the default state 1`] = `Array []`;
